style(ui): improve the code style (#83)